prevents scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,24 @@ input{
   /* font-family:'montserrat-regular'; */
 }
 
+#container{
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+#content{
+  width: 100%;
+  height: 99%;
+  overflow: auto;
+  padding-right: 15px;
+}
+
+html, body{
+  height: 99%;
+  overflow:hidden;
+}
+
 nav {
   background-color: #000;
 }
